<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mr.Keep</string>
    <string name="action_settings">设置</string>
    <string name="click_me">单击我</string>
    <string name="site_name">名称</string>
    <string name="user_name">登录名</string>
    <string name="word_value">密码</string>
    <string name="remark">备注</string>
    <string name="go_add">添加 +</string>
    <string name="go_back">返回</string>
    
    <string name="add">添加</string>
    <string name="update">编辑</string>
    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="reg">注册</string>
    
    <string name="what_updated">
        0.2.5.0\n#22 #25 #26 #27 #28 #29 #32 #33 #34
        \n\n0.1.9.2\n增加对Android 7的支持
        \n\n0.1.9.1\n修正滑动检索时汉字的问题
        \n\n0.1.9.0\n一览右侧增加滑动检索定位功能  #18
        \n\n0.1.8.5\n一览画面位置保持 #19
        \n\n0.1.8.4\n修正“点到密码时不会自动切换到英文输入法”的问题 #9
\n\n0.1.8.1\n详情画面更换密码显示的字体 #16
\n\n0.1.8.0\n增加“生成随机密码”辅助
\n\n0.1.7.0\n未加密的备份文件存留提示
\n\n0.1.6.9\n#7 #8 #10 #11 #12 #13 #14 问题修正
    </string>
    <string name="partners">\@石头大风吹</string>
    <string name="about_keep">
        Keep，
        \n就是一个密码保险箱，
        \n无论你的密码再多再复杂，
        \n她都能安全地为您储存起来，
        \n只需记住一组能打开它的密码，
        \n即可高枕无忧。
        \n\n问题反馈可访问以下地址
        \nYaiba.net</string>
    
    
    <string name="main_title">Mr.Keep</string>
    <string name="add_a_record">添加一条记录</string>
    <string name="edit_a_record">正在编辑</string>
    <string name="detail_a_record">记录详情</string>
    <string name="data_management">备份与恢复</string>
    <string name="login_p_change">修改登录密码</string>

    <string name="login_title">Keep密码仓库</string>
    <string name="input_login_password">请输入登陆密码</string>
    <string name="set_login_old_password">当前密码</string>
    <string name="set_login_new_password">新密码</string>
    <string name="set_login_new_password2">再次确认</string>
    <string name="set_login_password">请设置登陆密码</string>
    <string name="set_login_password2">再次输入登陆密码</string>
    <string name="set_login_password_discription">出于安全考虑，本软件凭密码使用，请牢记！</string>
    <string name="get_local_version_error">取得本地版本时出错</string>
    
    <string name="login_mess">登录</string>
    <string name="record_list_search">查找&#8230;</string>
    
    <string name="data_bakup">数据备份</string>
    <string name="data_bakup_description">数据将以文件形式存储在您的设备中</string>
    <string name="data_bakup_description_dir">/keep/</string>
    <string name="data_recover">数据恢复</string>
    <string name="data_recover_description">程序会读取指定目录中的备份文件</string>
    <string name="data_mess_import">批量导入</string>
    <string name="data_mess_import_description">避免初期手工录入的繁琐，本程序支持批量导入账户信息</string>
    <string name="data_mess_import_description_dir">/keep/keepres_mass.xml\n本文件格式参考导出文件，密码部分填写明文，程序会自动识别并加密导入</string>
    
    
	<string name="dialog_update_title">更新</string>
	<string name="dialog_update_msg">发现新版本，版本号：</string>
	<string name="dialog_update_msg2">，是否立即更新？更新前请确认已经备份重要数据。</string>
	<string name="dialog_update_btnupdate">更新</string>
	<string name="dialog_update_btnnext">下次再说</string>
	<string name="dialog_downloading_msg">正在下载更新。。。</string>
	<string name="dialog_alert_title">警告</string>
	<string name="dialog_downfailed_btndown">重新下载</string>
	<string name="dialog_downfailed_btnnext">以后再说</string>
	<string name="dialog_error_title">错误</string>
	<string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>
	
	<string name="update_already_latest">已经是最新版本</string>
	<string name="update_new_seg1">发现新版本，版本号：</string>
	<string name="update_new_seg2">\n正在下载更新</string>
	<string name="update_new_seg3">\n正在下载更新</string>
	<string name="update_error">更新出错</string>

    <string name="menu_inport_export">备份与恢复</string>
    <string name="menu_useEncode">使用加密</string>
	<string name="menu_change_login_password">修改登录密码</string>
	<string name="menu_whatupdate">更新说明</string>
	<string name="menu_checkupdate">检查更新</string>
	<string name="menu_support">技术支持</string>
	<string name="menu_about">关于Keep</string>

    <string name="menu_warming_have_unencode_file">警告：检测到目录中包含未加密的备份文件\n为了安全起见请备份后删除</string>

    <string name="version_unknown">未知版本</string>

</resources>
