<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

  
   <FrameLayout 
    android:layout_width="fill_parent"
    android:layout_height="50dp" >

        <Button
           android:id="@+id/change"
           android:layout_gravity="right|center_vertical"
	       android:layout_width="40dp"
	       android:layout_height="40dp"
		   android:layout_marginRight="10dp"
	       android:background="@drawable/save_01"
            />
    </FrameLayout>

    <EditText
        android:id="@+id/old_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/set_login_old_password"
        android:inputType="numberPassword"
        android:paddingTop="10dp"
        android:textSize="22sp" />
    
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/set_login_new_password"
        android:inputType="numberPassword"
        android:paddingTop="10dp"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:hint="@string/set_login_new_password2"
        android:inputType="numberPassword"
        android:paddingTop="10dp"
        android:textSize="22sp" />
    
    
    
    
    
    

</LinearLayout>