<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:weightSum="1">


            <Button
               android:id="@+id/reg"
               android:layout_gravity="right|center_vertical"
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_marginRight="10dp"
               android:background="@drawable/reg_01"  />


                <ImageView
                android:id="@+id/index_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/index_logo" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:hint="@string/set_login_password"
            android:inputType="numberPassword"
            android:paddingTop="10dp"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:hint="@string/set_login_password2"
            android:inputType="numberPassword"
            android:paddingTop="10dp"
            android:textSize="22sp" />

        <TextView	android:id="@+id/version_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=":)"
            android:textStyle="normal|italic"
            android:textAllCaps="false" />

        <TextView	android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:text="@string/set_login_password_discription"
            android:textStyle="normal|italic"
            android:textColor="@color/darkred"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:id="@+id/textView2" />

    </LinearLayout>
</LinearLayout>