<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">


    <LinearLayout android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="10dp"
        android:weightSum="1">


                <ImageView
                    android:id="@+id/index_logo"
                    android:layout_width="105dp"
                    android:layout_height="105dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/index_logo" />


        <TextView	android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="26sp"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:paddingTop="10dp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingTop="40dp"
            android:layout_marginTop="0dp"
            android:textSize="22sp"
            android:gravity="center_horizontal"
            android:inputType="numberPassword"
            android:layout_gravity="center"
            android:hint="@string/input_login_password" />

        <TextView	android:id="@+id/version_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=":D"
            android:textStyle="normal|italic"
            android:textAllCaps="false" />


    </LinearLayout>
</LinearLayout>