<?xml version="1.0" encoding="utf-8"?>  
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"  
                                        android:orientation="vertical" 
                                        android:layout_width="fill_parent" 
                                        android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:layout_marginBottom="10dp"
            android:scrollbars="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/site_name" />

            <EditText
                android:id="@+id/site_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/user_name" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/word_value" />

            <!--水平布局，密码文本框，生成随机密码按钮-->
            <LinearLayout android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="1">

                <EditText
                    android:id="@+id/word_value"
                    android:layout_width="265dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.17"
                    android:ems="10"
                    android:fontFamily="monospace"
                    android:text=""
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/random_password"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textSize="10dp"
                    android:text="帮朕生成随机密码" />

            </LinearLayout>

            <!--密码扩展部分，上下布局  visible  invisible/gone-->
            <LinearLayout android:id="@+id/password_option"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/khaki"
                android:visibility="gone"
                android:weightSum="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="normal|italic"
                    android:text="密码选项" />

                <!--第一排三个复选按钮，水平布局-->
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:weightSum="1">
                    <CheckBox
                        android:id="@+id/checkbox_use_num"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:checked="true"
                        android:text="1-9"  />

                    <CheckBox
                        android:id="@+id/checkbox_use_word_lowcase"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:checked="true"
                        android:text="a-z"  />

                    <CheckBox
                        android:id="@+id/checkbox_use_word_upcase"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="A-Z"  />

                    <CheckBox
                        android:id="@+id/checkbox_use_symbol"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="!@#$"  />
                </LinearLayout>


                <!--生成密码扩展中的密码长度设置，左右布局-->
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/khaki"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="密码长度" />
                    <!--android:text="8"-->
                    <EditText
                        android:id="@+id/txt_password_length"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:digits="1234567890"
                        android:inputType="number"
                        android:maxLength="5"
                        android:ems="10" />

                    <!--android:text="(支持4-16长度)"-->
                    <TextView
                        android:id="@+id/txt_password_length_hint"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:textColor="?android:attr/textColorHint"
                        android:textSize="12dp"
                        android:textStyle="normal|italic" />
                </LinearLayout>


                <!--包涵下列字符串，左右布局-->
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/khaki"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="102dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="包含下列字符串" />

                    <EditText
                        android:id="@+id/txt_contain"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:maxLength="16"
                        android:ems="10" />
                </LinearLayout>

                <!--不包涵下列字符串，左右布局-->
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/khaki"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="不包含下列字符串" />

                    <EditText
                        android:id="@+id/txt_not_contain"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:maxLength="16"
                        android:ems="10" />
                </LinearLayout>

                <!--以此开头，左右布局-->
                <LinearLayout android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:background="@color/khaki"
                    android:weightSum="1">
                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:textStyle="normal|italic"
                        android:text="以此开头" />

                    <EditText
                        android:id="@+id/txt_index"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:maxLength="16"
                        android:ems="10" />
                </LinearLayout>





                <Button
                    android:id="@+id/create_random_password"
                    android:layout_gravity="right|center_vertical"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="2dp"
                    android:textSize="14dp"
                    android:text="生成" />

            </LinearLayout>




            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:text="@string/remark" />

            <EditText
                android:id="@+id/remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"/>

            <Button
                android:id="@+id/add"
                android:layout_gravity="right|center_vertical"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:text="保存" />

            <!--纯占位，没招了，要不按钮下边儿看不见了！-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:textSize="12sp"
                android:text="" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
  
